# feathers

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  WHY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  DEMO.md
docs/specs/: 00-schema.md  01-renderer.md  02-cli.md  03-ast-patcher.md  04-e2e.md
src/feathers/: __init__.py  cli.py
src/feathers/demos/: users.yaml
src/feathers/generator/: __init__.py  ast_patcher.py  context.py  renderer.py
src/feathers/schema/: __init__.py  errors.py  loader.py  service.py
src/feathers/templates/service/: .env.example.j2  .python-version.j2  Dockerfile.j2  Makefile.j2  README.md.j2  ci.yml.j2  pyproject.toml.j2  render.yaml.j2
src/feathers/templates/service/src/: __init__.py.j2  main.py.j2
src/feathers/templates/service/src/api/routers/: router.py.j2
src/feathers/templates/service/src/core/: __init__.py.j2  platform.py.j2
src/feathers/templates/service/src/models/: model.py.j2
src/feathers/templates/service/tests/: test_health.py.j2
tests/: conftest.py  test_smoke.py
tests/e2e/: test_generate_and_run.py
tests/unit/: test_ast_patcher.py  test_cli.py  test_context.py  test_renderer.py  test_schema.py
